[gd_scene load_steps=12 format=3 uid="uid://b177wpeg11v3v"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_vnogd"]
[ext_resource type="Texture2D" uid="uid://bpmeumkrtfgcq" path="res://assets/ui/oxygen_indicator.png" id="2_4feuy"]
[ext_resource type="Texture2D" uid="uid://q3diug5n4lvr" path="res://assets/ui/depth_indicator.png" id="2_ul6vp"]
[ext_resource type="Texture2D" uid="uid://cfsrxp7j32kni" path="res://assets/ui/healthbar.png" id="4_2qmoa"]
[ext_resource type="Texture2D" uid="uid://ccjaqhfvdjg6s" path="res://assets/ui/heart.png" id="5_h1ke3"]

[sub_resource type="Gradient" id="Gradient_wmah2"]
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uslhm"]
gradient = SubResource("Gradient_wmah2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82gxb"]
bg_color = Color(0, 0.631373, 0.964706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_mmpjw"]
VSlider/icons/grabber_disabled = SubResource("GradientTexture1D_uslhm")
VSlider/styles/grabber_area = SubResource("StyleBoxFlat_82gxb")

[sub_resource type="Animation" id="Animation_4bxwr"]
resource_name = "beat"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("healthIndicator/heart1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("healthIndicator/heart2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("healthIndicator/heart3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ac0l"]
_data = {
"beat": SubResource("Animation_4bxwr")
}

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_vnogd")

[node name="BlackoutRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="DepthIndicator" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = -39.0
offset_right = 200.0
offset_bottom = 81.0
grow_horizontal = 2
texture = ExtResource("2_ul6vp")

[node name="DepthLabel" type="Label" parent="DepthIndicator"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.5
offset_top = 39.0
offset_right = 154.5
offset_bottom = 119.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "DEPTH"
horizontal_alignment = 1

[node name="OxygenIndicator" type="TextureRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -375.0
offset_right = 120.0
offset_bottom = 375.0
grow_vertical = 2
texture = ExtResource("2_4feuy")

[node name="OxygenMeter" type="VSlider" parent="OxygenIndicator"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = -351.0
offset_right = 43.0
offset_bottom = 189.0
grow_vertical = 2
scale = Vector2(4, 1)
theme = SubResource("Theme_mmpjw")
value = 100.0
editable = false
scrollable = false
tick_count = 2

[node name="healthIndicator" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_2qmoa")

[node name="heart1" type="Sprite2D" parent="healthIndicator"]
position = Vector2(116, 60)
scale = Vector2(1.00354, 1.00354)
texture = ExtResource("5_h1ke3")

[node name="heart2" type="Sprite2D" parent="healthIndicator"]
position = Vector2(256, 60)
scale = Vector2(1.00354, 1.00354)
texture = ExtResource("5_h1ke3")

[node name="heart3" type="Sprite2D" parent="healthIndicator"]
position = Vector2(396, 60)
scale = Vector2(1.00354, 1.00354)
texture = ExtResource("5_h1ke3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "beat"
libraries = {
"": SubResource("AnimationLibrary_7ac0l")
}
